2006-10-16 Borut Razem <borut.razem AT siol.net>

	* configure.in, configure, sdccconf_in.h, src/SDCCglobal,
	  debugger/mcs51/Makefile.in, debugger/mcs51/sdcdb.[ch],
	  debugger/mcs51/aclocal.m4, debugger/mcs51/acinclide.m4,
	  debugger/mcs51/config.h.in, debugger/mcs51/configure.in,
	  debugger/mcs51/configure:
	  [ 1185668 ] add gnu readline support to sdcdb - enabled

2006-10-16 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (BankSelect): another fix on (partial) BANKSELs,
	  fixes #1577882, removes close to all banking optimizations

2006-10-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCsymt.c (checkSClass): no error for uninitialised absolute
	  variables in code memory
	* support/regression/tests/absolute.c: added test for this

2006-10-15 Raphael Neider <rneider AT web.de>

	* src/pic/pcode.c (InsertBankSel): suppress BANKSELs for one bank
	  devices,
	  (BankSelect): emit BANKSEL before touching linker-placed regs,
	  fixes #1570934

2006-10-10 Raphael Neider <rneider AT web.de>

	* src/SDCCmain.c (optionsTable): accept --stack-size for PICs,
	* src/pic/device.c (pic14_getSharebankSize,pic14_getSharebankAddress),
	* src/pic/main.c (_pic14_parseOptions),
	* src/pic/main.h: mostly reverted to previous state, now use results
	    from SDCCmain.c's argument parsing

2006-10-10 Borut Razem <borut.razem AT siol.net>

	* debugger/mcs51/break.[ch], debugger/mcs51/cmd.c,
	  debugger/mcs51/sdcdb.[ch], debugger/mcs51/simi.c:
	  [ 1185668 ] add gnu readline support to sdcdb -
	  prepared for READLINE, not enabled yet,
	  thanks to <tal.bav AT gmail.com>

2006-10-10 Raphael Neider <rneider AT web.de>

	* src/pic16/pcode.c (pic16_pCode2str): use isACCESS_BANK macro
	* src/pic16/devices.inc,
	* device/include/pic16 (pic18f[24]620.h),
	* device/include/pic18fregs.h,
	* device/lib/pic16/pics.all,
	* device/lib/pic16/libdev/pic18f[24]{620,525}.c): added support for
	    18f2620, 18f4620, 18f2525, and 18f4525 devices, thanks to